--- a/css/main.css
+++ b/css/main.css
@@ -6,4 +6,15 @@ html, body {
   margin: 0px;
   color: #FDFDFD; }
 
+.show {
+  width: 100%;
+  height: 100px;
+  color: #B9B9B9; }
+
+button {
+  text-align: center;
+  background-color: #FDFDFD;
+  width: 100%;
+  height: 100%; }
+
 /*# sourceMappingURL=main.css.map */
