--- a/sass/main.sass
+++ b/sass/main.sass
@@ -10,3 +10,14 @@ html,body
     margin: 0px
     color: $color-white
     
+.show
+    width: 100%
+    height: 100px
+    color: $color-dark
+
+button
+    text-align: center
+    background-color: $color-white
+    width: 100%
+    height: 100%
+
