--- a/sass/main.sass
+++ b/sass/main.sass
@@ -3,21 +3,50 @@ $color-grey: #F4F4F4
 $color-white: #FDFDFD
 $color-dark: #B9B9B9    
 *
-    border: solid 1px #985309
+    // border: solid 1px #985309
 
 html,body 
     padding: 0px
     margin: 0px
     color: $color-white
+
+    position: relative
     
-.show
-    width: 100%
-    height: 100px
-    color: $color-dark
+
+.box
+    width: 300px
+    height: 400px
+    
+    position: absolute
+    left: 50%
+    
+    background-color: $color-blue
+
+    table
+        width: 100%
+        height: 100%
+        border: none
+        position: absolute
+        .show_num
+            position: absolute
+            top: 0px
+            right: 0px
+            height: 150px
+            font-size: 25px
+        span.show
+            width: 300px
+            height: 100%
+            color: $color-white
+
+        
+   
 
 button
     text-align: center
     background-color: $color-white
     width: 100%
     height: 100%
+    border: none
+
+    font-size: 20px
 
