--- a/css/main.css
+++ b/css/main.css
@@ -1,37 +1,57 @@
+@charset "UTF-8";
 html, body {
   padding: 0px;
   margin: 0px;
   color: #FDFDFD;
-  position: relative; }
+  position: relative;
+  font-family: "微軟正黑體"; }
 
 .box {
   width: 300px;
-  height: 400px;
+  height: 420px;
   position: absolute;
   left: 50%;
-  background-color: #425865; }
+  top: 100px;
+  transform: translateX(-50%);
+  background-color: #F0F0F0; }
   .box table {
     width: 100%;
     height: 100%;
     border: none;
-    position: absolute; }
+    position: absolute;
+    color: #838383;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); }
     .box table .show_num {
-      position: absolute;
-      top: 0px;
-      right: 0px;
-      height: 150px;
-      font-size: 25px; }
+      width: 250px;
+      height: 120px;
+      font-size: 30px;
+      text-align: right; }
     .box table span.show {
       width: 300px;
       height: 100%;
-      color: #FDFDFD; }
+      margin-right: 10px;
+      color: #F8874F; }
+    .box table td {
+      width: 50px; }
 
 button {
   text-align: center;
   background-color: #FDFDFD;
+  color: #838383;
   width: 100%;
   height: 100%;
   border: none;
   font-size: 20px; }
+
+#btn_opra_9 {
+  background-color: #F8874F;
+  color: #F0F0F0; }
+
+#btn_opra_4, #btn_opra_5, #btn_opra_6, #btn_opra_7 {
+  background-color: #E4E4E4; }
+
+#btn_num_0 {
+  text-align: left;
+  padding-left: 32px; }
 
 /*# sourceMappingURL=main.css.map */
