--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,7 +1,10 @@
-$color-blue: #425865
-$color-grey: #F4F4F4
+$color-blue: #C7CEDC
+$color-grey: #F0F0F0
 $color-white: #FDFDFD
-$color-dark: #B9B9B9    
+$color-dark: #838383
+$color-yellow: #FFEC84
+$color-dblue: #7B8089
+$color-orange: #F8874F
 *
     // border: solid 1px #985309
 
@@ -11,42 +14,61 @@ html,body
     color: $color-white
 
     position: relative
-    
+    font-family: '微軟正黑體'
 
 .box
     width: 300px
-    height: 400px
+    height: 420px
     
     position: absolute
     left: 50%
-    
-    background-color: $color-blue
+    top: 100px
+    transform: translateX(-50%)
+    background-color: $color-grey
 
     table
         width: 100%
         height: 100%
         border: none
         position: absolute
+        color: $color-dark
+        box-shadow: 0px 0px 10px rgba(0,0,0,0.1)
+        
         .show_num
-            position: absolute
-            top: 0px
-            right: 0px
-            height: 150px
-            font-size: 25px
+            width: 250px
+            height: 120px
+            
+            font-size: 30px
+            text-align: right
+            
+            
         span.show
             width: 300px
             height: 100%
-            color: $color-white
-
-        
+            margin-right: 10px
+            color: $color-orange
+        td
+            width: 50px
+            
    
 
 button
     text-align: center
     background-color: $color-white
+    color: $color-dark
     width: 100%
     height: 100%
     border: none
 
     font-size: 20px
 
+#btn_opra_9
+    background-color: $color-orange
+    color: $color-grey
+
+#btn_opra_4 , #btn_opra_5 , #btn_opra_6 , #btn_opra_7
+    background-color: #E4E4E4
+
+#btn_num_0
+    text-align: left
+    padding-left: 32px
