--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 html, body {
   padding: 0px;
   margin: 0px;
-  color: #FDFDFD;
+  background-color: #FDFDFD;
   position: relative;
   font-family: "微軟正黑體"; }
 
@@ -10,17 +10,18 @@ html, body {
   width: 300px;
   height: 420px;
   position: absolute;
+  overflow: hidden;
   left: 50%;
   top: 100px;
   transform: translateX(-50%);
-  background-color: #F0F0F0; }
+  background-color: #F0F0F0;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); }
   .box table {
     width: 100%;
     height: 100%;
     border: none;
     position: absolute;
-    color: #838383;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); }
+    color: #838383; }
     .box table .show_num {
       width: 250px;
       height: 120px;
