--- a/css/main.css
+++ b/css/main.css
@@ -25,13 +25,20 @@ html, body {
     .box table .show_num {
       width: 250px;
       height: 120px;
-      font-size: 30px;
       text-align: right; }
-    .box table span.show {
-      width: 300px;
+    .box table .show {
+      box-sizing: border-box;
+      width: 100%;
       height: 100%;
-      margin-right: 10px;
-      color: #F8874F; }
+      text-align: right;
+      padding-right: 10px;
+      color: #F8874F;
+      border: none;
+      font-size: 30px;
+      background-color: #F0F0F0;
+      -webkit-tap-highlight-color: none;
+      border-bottom: 2px solid #838383;
+      letter-spacing: 2px; }
     .box table td {
       width: 50px; }
 
@@ -42,7 +49,12 @@ button {
   width: 100%;
   height: 100%;
   border: none;
-  font-size: 20px; }
+  font-size: 20px;
+  cursor: pointer; }
+
+button::hover {
+  background-color: #FDFDFD;
+  color: #F0F0F0; }
 
 #btn_opra_9 {
   background-color: #F8874F;
