--- a/sass/main.sass
+++ b/sass/main.sass
@@ -40,16 +40,26 @@ html,body
             width: 250px
             height: 120px
             
-            font-size: 30px
+            
             text-align: right
             
             
             
-        span.show
-            width: 300px
+        .show
+            box-sizing: border-box
+            width: 100%
             height: 100%
-            margin-right: 10px
+            text-align: right
+            padding-right: 10px
             color: $color-orange
+            border: none
+            font-size: 30px
+            background-color: $color-grey
+            -webkit-tap-highlight-color: none
+            border-bottom: 2px solid $color-dark
+            letter-spacing: 2px
+
+
         td
             width: 50px
             
@@ -64,6 +74,11 @@ button
     border: none
 
     font-size: 20px
+    cursor: pointer
+    
+button::hover
+    background-color: $color-white
+    color: $color-grey
 
 #btn_opra_9
     background-color: $color-orange
